# blackbird

./: Cargo.toml  README.md
blackbird/: Cargo.toml
blackbird-core/: Cargo.toml
blackbird-core/examples/: handwritten_queries.rs  parse_ast.rs  scratch.rs
blackbird-core/src/: lib.rs  schema.rs
blackbird-core/src/snapshots/: blackbird_core__schema__tests__get_schemas_from_migrations.snap  blackbird_core__tests__get_schemas_from_migrations.snap
blackbird-macros/: Cargo.toml
blackbird-macros/src/: lib.rs
blackbird-macros/tests/: invoke.rs
blackbird/examples/: scratch.rs
blackbird/examples/migrations/: 3_add_not_null_col.sql
examples/: scratch.rs  test_migration_application.rs
examples/migrations/: 1_create_table.sql  2_drop_col.sql
src/: lib.rs  main.rs
src/snapshots/: blackbird__tests__get_schemas_from_migrations.snap.new
