[workspace]
members = [
    "blackbird",
    "blackbird-core", # Stuff that's shared between the main lib and the macros
    "blackbird-macros"
]

[workspace.dependencies]
surrealdb = {version = "1.0.0-beta.8", features = ["parallel", "kv-mem", "kv-rocksdb"], default_features=false}
thiserror = "1.0.38"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
once_cell = "1"
insta = "1"
syn = "1"
quote = "1"
proc-macro2 = "1"